FAGSYSTEM-279663: Sammenslåing tar høyde til ulike hendelser. (#2563)